--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="title" content="Fixturbo - Car Repair & Auto Services React Js Template">
-  <meta name="description"
-    content="Fixturbo is a clean and modern React Template suitable for any type of Auto Servicing, Car Repair & Maintenance website. It is created for automobile servicing providers who offer car wash, car service, routine maintenance, truck service, etc. This HTML template can be used for car servicing, car repairing, car wash, auto shop, mechanic shop, batteries shop, tire / wheel shop, and multipurpose businesses. We have used comment on codes and also decorated the codes beautifully so one can find it very easy to customize.">
-  <meta name="keywords" content="Car Repair,Servicing">
-  <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="language" content="English">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.min.css" />
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
-  <title> Fixturbo - Car Repair & Auto Services React Js Template</title>
-</head>
+    <title>Raja Carlift Services | Sharjah to Dubai Transport</title>
 
-<body>
-  <div id="root"></div>
-</body>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/img/logo.png" />
 
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Reliable and affordable carlift services from Sharjah to Dubai. Book your ride now!"
+    />
+    <meta
+      name="keywords"
+      content="carlift, transport, Sharjah to Dubai, ride booking, car rental, affordable transport"
+    />
+    <meta name="author" content="Raja Carlift Services" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Open Graph (For Facebook Sharing) -->
+    <meta
+      property="og:title"
+      content="Raja Carlift Services | Sharjah to Dubai Transport"
+    />
+    <meta
+      property="og:description"
+      content="Reliable and affordable carlift services from Sharjah to Dubai. Book your ride now!"
+    />
+    <meta
+      property="og:image"
+      content="https://yourwebsite.com/assets/img/share-image.png"
+    />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card (For Twitter Sharing) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Raja Carlift Services" />
+    <meta
+      name="twitter:description"
+      content="Reliable and affordable carlift services from Sharjah to Dubai. Book your ride now!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://yourwebsite.com/assets/img/share-image.png"
+    />
+    <meta name="twitter:site" content="@RajaCarlift" />
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/css/main.d8fa28fe.css" />
+
+    <!-- JavaScript -->
+    <script defer src="/static/js/main.6c0c8d71.js"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
