--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="assets/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Raja Carlift Services | Sharjah to Dubai Transport</title>
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/img/logo.png" />
-
-    <!-- SEO Meta Tags -->
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="title"
+      content="Fixturbo - Car Repair & Auto Services React Js Template"
+    />
     <meta
       name="description"
-      content="Reliable and affordable carlift services from Sharjah to Dubai. Book your ride now!"
+      content="Raja Carlift services provides pick and drop locaation"
     />
-    <meta
-      name="keywords"
-      content="carlift, transport, Sharjah to Dubai, ride booking, car rental, affordable transport"
-    />
-    <meta name="author" content="Raja Carlift Services" />
+    <meta name="keywords" content="Car Repair,Servicing" />
     <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
-    <meta name="theme-color" content="#000000" />
-
-    <!-- Open Graph (For Facebook Sharing) -->
-    <meta
-      property="og:title"
-      content="Raja Carlift Services | Sharjah to Dubai Transport"
-    />
-    <meta
-      property="og:description"
-      content="Reliable and affordable carlift services from Sharjah to Dubai. Book your ride now!"
-    />
-    <meta
-      property="og:image"
-      content="https://yourwebsite.com/assets/img/share-image.png"
-    />
-    <meta property="og:url" content="https://yourwebsite.com" />
-    <meta property="og:type" content="website" />
-
-    <!-- Twitter Card (For Twitter Sharing) -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Raja Carlift Services" />
-    <meta
-      name="twitter:description"
-      content="Reliable and affordable carlift services from Sharjah to Dubai. Book your ride now!"
-    />
-    <meta
-      name="twitter:image"
-      content="https://yourwebsite.com/assets/img/share-image.png"
-    />
-    <meta name="twitter:site" content="@RajaCarlift" />
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="/assets/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/static/css/main.d8fa28fe.css" />
-
-    <!-- JavaScript -->
-    <script defer src="/static/js/main.6c0c8d71.js"></script>
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
+    <title>Raja Carlift services</title>
   </head>
+
   <body>
     <div id="root"></div>
   </body>
