--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,12 @@
     <link rel="shortcut icon" href="assets/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="title"
-      content="Fixturbo - Car Repair & Auto Services React Js Template"
-    />
+    <meta name="title" content="Raja Carlift services" />
     <meta
       name="description"
-      content="Raja Carlift services provides pick and drop locaation"
+      content="Raja Carlift services provides pick and drop location"
     />
-    <meta name="keywords" content="Car Repair,Servicing" />
+    <meta name="keywords" content="Car lift,Servicing" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
